--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
       <button class="nav-link" data-section="analysis">Analiza</button>
       <button class="nav-link" data-section="impact">Skutki i reagowanie</button>
       <button class="nav-link" data-section="sources">Źródła</button>
+
+      <!-- NEW: Edit mode toggle -->
+      <button class="edit-toggle" id="edit-toggle" type="button" aria-pressed="false">
+        <span class="edit-toggle-indicator"></span>
+        <span class="edit-toggle-label">Tryb edycji</span>
+      </button>
     </nav>
   </header>
 
