--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </section>
     <!-- CENTER THE MAP -->
 <div style="text-align: center;">
-  <figure class="card figure-card" style="display: inline-block; margin: 0;">
+  <figure class="card figure-card">
     <img src="01.jpg" alt="Mapa położenia wyspy La Palma w archipelagu Wysp Kanaryjskich" />
     <figcaption>
       Położenie wyspy La Palma (zaznaczonej czerwonym obramowaniem) w archipelagu Wysp Kanaryjskich
