--- a/index.html
+++ b/index.html
@@ -564,10 +564,19 @@
     </section>
   </main>
 
+    <!-- Image lightbox overlay -->
+    <div class="image-lightbox" id="image-lightbox" aria-hidden="true">
+      <button class="image-lightbox__close" type="button" aria-label="Zamknij podgląd">&times;</button>
+      <img class="image-lightbox__img" src="" alt="" />
+      <p class="image-lightbox__caption"></p>
+    </div>
+
   <footer class="site-footer">
     <p>Opracowanie: Volcán Tajogaite · La Palma 2021</p>
   </footer>
 
   <script src="script.js"></script>
+
+
 </body>
 </html>
