--- a/index.html
+++ b/index.html
@@ -338,14 +338,23 @@
           </section>
 
           <figure class="card figure-card">
-            <img src="03.jpg" style="margin-bottom:10px;" />
-            <img src="05.jpg" style="margin-bottom:10px;" />
-            <img src="08.png" alt="Wizualizacje zmian linii brzegowej i depozytów erupcyjnych" />
+            <img src="03.jpg" style="margin-bottom:10px;" alt ="enterdescription"/>
             <figcaption>
-              Przykładowe wizualizacje: zmiana linii brzegowej wyspy w wyniku tworzenia delt lawowych,
-              napływ lawy do oceanu w rejonie klifu Los Guirres (9 listopada 2021 r.) oraz modele różnic
-              wysokości dla depozytów erupcyjnych (Civico i in., 2022).
+              Mapa przedstawia orientacyjny obszar zalany lawą, opracowany na podstawie porównania ortofotomapy z 2021 roku (przed erupcją) oraz z 2022 roku (po erupcji).
+Analiza wskazuje, że powierzchnia zalana lawą wyniosła około 12,06 km².
+Zasięg ma charakter przybliżony, ponieważ został określony wizualnie.  W niektórych fragmentach rozróżnienie powierzchni pokrytej lawą a obszarami przykrytymi pyłem wulkanicznym jest trudne. Mimo to, uzyskany wynik pozostaje zgodny z wartościami publikowanymi w źródłach naukowych i raportach dotyczących erupcji. 
             </figcaption>
+          </figure>
+
+          <figure class="card figure-card">
+            <img src="05.jpg" style="margin-bottom:10px;" />
+            <figcaption>
+              Obszary pokryte lawą według klas pokrycia terenu na podstawie Corine Land Cover 2018 r. W obliczeniach do wykresu i tabeli pominięto klasę „Morza i oceany”, aby uwzględnić jedynie powierzchnie lądowe pokryte lawą. Największą część terenów zniszczonych przez erupcję stanowiły lasy iglaste (65,4%), a w dalszej kolejności sady i plantacje (16,6%) oraz obszary z roślinnością rzadką i zaroślami (11,5%). Lawa zniszczyła również fragmenty zabudowy i terenów uprawnych.
+Całkowite straty spowodowane erupcją oszacowano na 842,33 mln euro. Największe z nich dotyczyły infrastruktury drogowej (ok. 228 mln euro), upraw bananów i produkcji rolnej (ok. 200 mln euro) oraz zabudowy mieszkaniowej i usługowej (ok. 165 mln euro).            </figcaption>
+          </figure>
+
+          <figure class="card figure-card">
+            <img src="08.png" alt="Wizualizacje zmian linii brzegowej i depozytów erupcyjnych" />
           </figure>
           
 
