--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
     <section id="intro" class="content-section is-active" aria-labelledby="intro-title">
       <header class="section-header">
         <p class="section-kicker">La Palma · Wyspy Kanaryjskie</p>
-        <h1 id="intro-title">Volcán Tajogaite – erupcja, która zmieniła wyspę</h1>
+        <h1 id="intro-title">Volcán Tajogaite - erupcja, która zmieniła wyspę</h1>
         <p class="section-lead">
           W 2021 roku, w południowo-zachodniej części systemu wulkanicznego Cumbre Vieja na wyspie La Palma,
-          rozpoczęła się erupcja, w wyniku której powstał nowy stożek – Volcán Tajogaite.
-          Zjawisko to było wyjątkowe ze względu na długość trwania (85 dni), skalę zniszczeń oraz trwałe
-          przekształcenie rzeźby wyspy, w tym utworzenie nowego półwyspu lawowego.
+          rozpoczęła się erupcja, w wyniku której powstał nowy stożek - Volcán Tajogaite.
+          Zjawisko to było można uznać za ekstremalne ze względu na długość trwania (85 dni), skalę zniszczeń
+          oraz trwałe przekształcenie rzeźby wyspy, w tym utworzenie nowego półwyspu lawowego.
         </p>
       </header>
 
@@ -60,7 +60,7 @@
             <p>
               Wyspa uformowała się w wyniku serii erupcji wulkanicznych, które przez miliony lat
               kształtowały jej obecną rzeźbę. W czasach historycznych (od XV wieku) odnotowano osiem erupcji,
-              z których ostatnia – na paśmie wulkanicznym Cumbre Vieja – miała miejsce w 2021 roku.
+              z których ostatnia, na paśmie wulkanicznym Cumbre Vieja, miała miejsce w 2021 roku.
             </p>
           </section>
         </article>
@@ -75,7 +75,7 @@
               </div>
               <div>
                 <dt>Okres</dt>
-                <dd>19.09 – 13.12.2021</dd>
+                <dd>19.09 - 13.12.2021</dd>
               </div>
               <div>
                 <dt>Typ erupcji</dt>
@@ -93,7 +93,7 @@
           </section>
 
           <section class="card card-note">
-            <h3>Kontext geologiczny</h3>
+            <h3>Kontekst geologiczny</h3>
             <p>
               System Cumbre Vieja jest jednym z najbardziej aktywnych kompleksów wulkanicznych
               na Wyspach Kanaryjskich. Erupcja z 2021 roku dostarczyła unikalnych danych o dynamice
@@ -131,7 +131,7 @@
           <section class="block">
             <h3>Charakterystyka erupcji</h3>
             <ul class="data-list">
-              <li><span>Czas trwania:</span> 19.09 – 13.12.2021 (85 dni)</li>
+              <li><span>Czas trwania:</span> 19.09 - 13.12.2021 (85 dni)</li>
               <li><span>Lokalizacja:</span> grzbiet Cumbre Vieja, południowy zachód La Palmy, Wyspy Kanaryjskie, Hiszpania</li>
               <li><span>Typ erupcji:</span> erupcja szczelinowa</li>
               <li><span>Wulkan:</span> Tajogaite</li>
@@ -159,7 +159,7 @@
             <p>
               W kolejnych dniach hipocentra wstrząsów zaczęły przemieszczać się ku płytszym partiom skorupy,
               a ich liczba rosła nawet do tysiąca na dobę. Oznaczało to szybkie pękanie skał pod wpływem ciśnienia magmy.
-              Zgromadzenie około 6 mln m³ magmy na głębokości 11–13 km w krótkim czasie doprowadziło do osiągnięcia
+              Zgromadzenie około 6 mln m³ magmy na głębokości 11 - 13 km w krótkim czasie doprowadziło do osiągnięcia
               krytycznej objętości i ciśnienia, co umożliwiło przebicie się magmy przez szczeliny tektoniczne
               i rozpoczęcie erupcji 19 września 2021 r.
             </p>
@@ -173,7 +173,7 @@
               i magmy sięgający około 300 m wysokości.
             </p>
             <p>
-              W pierwszych dniach dominowały eksplozje o charakterze strombolijskim – pulsacyjne erupcje wyrzucające
+              W pierwszych dniach dominowały eksplozje o charakterze strombolijskim - pulsacyjne erupcje wyrzucające
               popiół, lapille i bomby wulkaniczne o średnicy do 1,5 m. Prędkość emisji gazów i materiału
               piroklastycznego przekraczała 330 m/s.
             </p>
@@ -188,7 +188,7 @@
             <p>
               Jednym z najbardziej dynamicznych epizodów był 9 października, kiedy doszło do częściowego zawalenia
               się stożka głównego. W efekcie powstała gwałtowna lawina lawy i materiału skalnego w rejonie Tacande de Arriba.
-              Bloki skalne o wielkości kilku–kilkunastu metrów były unoszone z dużą prędkością przez potok lawowy.
+              Bloki skalne o wielkości kilku-kilkunastu metrów były unoszone z dużą prędkością przez potok lawowy.
             </p>
           </section>
 
@@ -426,7 +426,7 @@
           </p>
         </section>
 
-        <!-- MOVED: coastline/NMT figures so Analiza has 6 images -->
+        <!-- Coastline / NMT figures -->
         <figure class="card figure-card">
           <img src="53.jpg" alt="Porównanie linii brzegowej La Palmy przed i po erupcji" />
           <figcaption>
@@ -647,14 +647,7 @@
         </article>
 
         <aside class="column-side">
-          <section class="card card-note">
-            <h3>Jak korzystać z danych?</h3>
-            <p>
-              Materiały te mogą posłużyć do dalszych analiz GIS (zasięg lawy, zmiany linii brzegowej),
-              badań z zakresu geologii wulkanicznej, a także do opracowywania scenariuszy zarządzania kryzysowego
-              dla kolejnych potencjalnych erupcji wulkanów typu Cumbre Vieja.
-            </p>
-          </section>
+          <!-- "Jak korzystać z danych?" section removed as requested -->
         </aside>
       </div>
     </section>
